[tool.poetry]
name = "cronos-verification-cronoscan-explorer-tutorial"
version = "0.1.0"
description = ""
authors = ["ken timsit <8959282+kentimsit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
jupyter = "^1.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
